CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT(VEDAPytorch VERSION 8 LANGUAGES C CXX)

FIND_PACKAGE(Illyrian 0.3.0 REQUIRED)
ILLYRIAN_PROJECT(
	C_STANDARD		17
	CXX_STANDARD	17
	INSTALL_PREFIX "/usr/local/ve/"
)

ILLYRIAN_FIND_PACKAGE		(Tungl			VERSION 0.1.1	REQUIRED PYTHON "tungl/cmake"			PATHS "/usr/local/nle/tungl/cmake")
ILLYRIAN_FIND_PACKAGE		(VEDA			VERSION 2.0.0	REQUIRED PYTHON "veda/cmake"			PATHS "/usr/local/ve/veda/cmake")
ILLYRIAN_FIND_PACKAGE		(VEDATensors	VERSION 0.1.5	REQUIRED PYTHON "veda/tensors/cmake"	PATHS "/usr/local/ve/veda-tensors/cmake")
ILLYRIAN_FIND_PYTHON_FILE	(PYTORCH_CPU_LIBRARY			torch "libtorch_cpu.so"		REQUIRED PATHS "lib")
ILLYRIAN_FIND_PYTHON_FILE	(PYTORCH_PYTHON_LIBRARY			torch "libtorch_python.so"	REQUIRED PATHS "lib")
ILLYRIAN_FIND_PYTHON_FILE	(PYTORCH_C10_LIBRARY			torch "libc10.so"			REQUIRED PATHS "lib")
SET(PYTORCH_LIBRARIES ${PYTORCH_CPU_LIBRARY} ${PYTORCH_PYTHON_LIBRARY} ${PYTORCH_C10_LIBRARY})

MARK_AS_ADVANCED(PYTORCH_LIBRARIES PYTORCH_CPU_LIBRARY PYTORCH_PYTHON_LIBRARY PYTORCH_C10_LIBRARY)

GET_FILENAME_COMPONENT(PYTORCH_DIR ${PYTORCH_PYTHON_LIBRARY} DIRECTORY)
SET(PYTORCH_DIR ${PYTORCH_DIR}/..)

FILE(READ ${PYTORCH_DIR}/version.py PYTORCH_VERSION)
STRING(REGEX MATCH "__version__ = '([0-9.]+)" PYTORCH_VERSION ${PYTORCH_VERSION})
SET(PYTORCH_VERSION ${CMAKE_MATCH_1})

IF(NOT PYTORCH_VERSION)
	MESSAGE(FATAL_ERROR "Unable to find PyTorch installation!")
ENDIF()

MESSAGE(STATUS "Found Pytorch v${PYTORCH_VERSION}")

IF(NOT EXISTS ${CMAKE_BINARY_DIR}/pytorch)
	EXECUTE_PROCESS(COMMAND git clone https://github.com/pytorch/pytorch WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND_ERROR_IS_FATAL ANY)
ENDIF()

EXECUTE_PROCESS(COMMAND git fetch WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/pytorch COMMAND_ERROR_IS_FATAL ANY)
EXECUTE_PROCESS(COMMAND git checkout v${PYTORCH_VERSION} WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/pytorch COMMAND_ERROR_IS_FATAL ANY)
SET(PYTORCH_INCLUDE_DIRS
	"${PYTORCH_DIR}/include/" # for c10
	"${CMAKE_BINARY_DIR}/pytorch/src/ATen/src")

SET(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/dist" CACHE STRING "" FORCE)

INCLUDE_DIRECTORIES(${Tungl_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${VEDA_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${VEDATensors_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PYTORCH_INCLUDE_DIRS})

SET(VEDAPytorch_INSTALL_PATH "veda/pytorch")

ADD_SUBDIRECTORY(src)

INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/LICENSE DESTINATION ${VEDAPytorch_INSTALL_PATH})
INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/README.md DESTINATION ${VEDAPytorch_INSTALL_PATH})