CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT(VEDAPytorch VERSION 14.0.1 LANGUAGES C CXX)

FIND_PACKAGE(Illyrian 0.3.0 REQUIRED)
ILLYRIAN_PROJECT(
	C_STANDARD		17
	CXX_STANDARD	17
	INSTALL_PREFIX "${CMAKE_BINARY_DIR}/dist" 
)

SET(VEDAPytorch_INSTALL_PATH "veda/pytorch")
ADD_SUBDIRECTORY(src)

INSTALL(FILES
	${CMAKE_CURRENT_LIST_DIR}/LICENSE
	${CMAKE_CURRENT_LIST_DIR}/README.md
DESTINATION ${VEDAPytorch_INSTALL_PATH})