INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})

SET(SRC)
INCLUDE(${CMAKE_CURRENT_LIST_DIR}/veda/pytorch/CMakeLists.txt)
ADD_LIBRARY(veda-pytorch SHARED ${SRC})
ILLYRIAN_TARGET_OPTIONS(veda-pytorch
	PYTHON
	DESTINATION		${VEDAPytorch_INSTALL_PATH}/lib64
	PYTHON_RPATH	"$ORIGIN/../../../torch/lib" "$ORIGIN/../../../tungl/lib64" "$ORIGIN/../../lib64" "$ORIGIN/../../tensors/lib64"
)
TARGET_LINK_LIBRARIES(veda-pytorch PRIVATE
	${VEDA_LIBRARY}
	${Tungl_LIBRARY}
	${VEDATensors_LIBRARY}
	${PYTORCH_LIBRARIES}
)
TARGET_COMPILE_OPTIONS(veda-pytorch PRIVATE -Wno-unknown-pragmas)

IF(${PYTORCH_VERSION} VERSION_GREATER_EQUAL 2.7.0)
	TARGET_COMPILE_OPTIONS(veda-pytorch PRIVATE -D_GLIBCXX_USE_CXX11_ABI=1)
ELSEIF(${PYTORCH_VERSION} VERSION_GREATER_EQUAL 2)
	TARGET_COMPILE_OPTIONS(veda-pytorch PRIVATE -D_GLIBCXX_USE_CXX11_ABI=0)
ENDIF()

ADD_PYTHON_WHEEL(dist ${CMAKE_CURRENT_LIST_DIR}/veda-pytorch.json)

INCLUDE(${CMAKE_CURRENT_LIST_DIR}/python/CMakeLists.txt)