INSTALL(FILES
	${CMAKE_CURRENT_LIST_DIR}/__init__.py
	${CMAKE_CURRENT_LIST_DIR}/autocast.py
	${CMAKE_CURRENT_LIST_DIR}/autoload.py
	${CMAKE_CURRENT_LIST_DIR}/extension.py
	${CMAKE_CURRENT_LIST_DIR}/nn_module.py
	${CMAKE_CURRENT_LIST_DIR}/serialization.py
	${CMAKE_CURRENT_LIST_DIR}/storage.py
	${CMAKE_CURRENT_LIST_DIR}/tensor.py
	${CMAKE_CURRENT_LIST_DIR}/ve.py
DESTINATION ${VEDAPytorch_INSTALL_PATH})